# local_rag

./: .dockerignore  .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
python/local_rag/cli/: generate_pdf.py
python/local_rag/doc_generation/: create_prompt.py  text_generator.py  text_to_pdf.py
python/local_rag/models/: llm_name_factory.py  llm_registry.py
python/local_rag/scripts/: start_ollama.sh
